# ip6_backend_demo

./: .pre-commit-config.yaml  README.md  client.py  ebl_config.json  neo4j_setup.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ebl_coords/: main.py
ebl_coords/backend/: constants.py  ecos.py  singleton_meta.py
ebl_coords/backend/command/: command.py  db_cmd.py  ecos_cmd.py  invoker.py
ebl_coords/backend/observable/: ecos_oberver.py  ecos_subject.py  gtcommand_subject.py  observer.py  stream_observer.py  subject.py
ebl_coords/graph_db/: graph_db_api.py
ebl_coords/graph_db/data_elements/: bpk_enum.py
ecos_mock/: ecos.csv
tests/: example_test.py
