[tool.poetry]
name = "ebl_coords"
version = "1.0.0"
description = "Demo with slim backend Ebl Coords using example REST Api."
authors = [
    "Robin Delimar <robin.delimar@students.fhnw.ch>",
    "Pascal Reiss <pascal.reiss@students.fhnw.ch>"
]


[tool.poetry.dependencies]
python = "~3.9"
numpy = "1.22.4"
pandas = "2.1.2"
scipy = "1.11.3"
neo4j = "5.15.0"
flask = "3.0.3"
requests = "2.31.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-timeout = "2.2.0"
pre-commit = "3.5.0"
pydocstyle = "6.3.0"
mypy = "1.6.1"
pylint = "3.0.2"
pycln = "2.3.0"
prettier = "0.0.7"
pyupgrade = "3.15.0"
isort = "5.12.0"
black = "23.10.1"
dataclasses-json = "0.6.3"
typing = "3.7.4.3"
pyinstaller = "^6.5"

[build-system]
requires = ["poetry-core=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output=9
line_length=100
profile="black"
known_first_party = ["ebl_coords"]

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
